@@ -1,4 +1,5 @@
 - Fix missing css/js scripts in filter form in mail task
+- Fix default vacation status (#1490019)
 
 * version 8.0 [2014-07-16]
 -----------------------------------------------------------
